updated contact form

--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,6 @@ nav ul{
 }   
 li{
     float: right;
-    
-
 }
 nav li a{
     margin: 0 14px;
@@ -52,33 +50,51 @@ nav li a:hover {
 nav li .active{
     border-bottom: thin solid #ccc;
 }
-.links {
-    width: 50%;
-}
-.link-text1{
-    position: absolute;
-width: 409px;
-height: 38px;
-left: 30%;
-top: 458px;
+
+.content-contact {
+    display: flex;
+    flex-direction: row;
 }
 
-.link-text2{
+.links {
+    width: 50%;
+    height: 500px;
+    position: relative;
+}
+
+.link-box {
     position: absolute;
+    z-index: 1;
+    padding-right: 60px;
+    height: 50px;
+}
+
+.linken {
+width: 409px;
+right: 0px;
+top: 100px;
+}
+
+.emailaddress {
     width: 303px;
-    height: 61px;
-    left: 30%;
-    top: 540px;
+    right: 0px;
+    top: 200px;
 }
-.link-text3 {
-    position: absolute;
+.add {
     width: 171px;
-    height: 49px;
-    left: 30%
-    top: 540px;
+    right: 0px;
+    top: 300px;
 }
+.link-text {
+    text-align: right;
+}
+
 .icon {
+    position: absolute;
+    right: 0px;
+    top: 7px;
     border: thin solid black;
+    background: #fff;
     height: 35px;
     width: 35px;
     border-radius: 50%;
@@ -93,26 +109,31 @@ svg {
     
 }
 .line{ 
-    position: absolute;
-width: .2px;
-height: 675px;
-left: 850px;
+position: absolute;
+width: 1px;
+height: 500px;
+right: 15px;
 top: 0px;
 color: #B8B8B8;
 border: solid;
-background-color: #B8B8B8;;
+background-color: #B8B8B8;
+z-index: 0;
 }
 
 .contact-form{
+    padding-left: 100px;
     width: 50%;
-    margin-left: 1000px;
 }
 .iTravel{
     display: flex;
     background-color: #FBF8F5;
     margin-top: 5%;
     height: 600px;
-
+}
+a:hover {
+        color: black;
+        background-color: transparent;
+        text-decoration: underline;
 }
 .casestudy{ 
     position: absolute;
@@ -120,6 +141,7 @@ width: 134px;
 height: 42px;
 left: 970px;
 top: 330px;
+color: black;
 }
 
 .casestudy2{ 
@@ -128,6 +150,7 @@ width: 134px;
 height: 42px;
 left: 4px;
 top: 350px;
+color: black;
 }
 
 .casestudy3{ 
@@ -147,7 +170,6 @@ color: #494848;
     line-height: 35px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; 
 }
-
 
 .flex-container {
     display: flex;
@@ -169,7 +191,6 @@ height: 329px;
 top: 310px;
 margin-left: 4%;
 
-
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; 
 font-style: normal;
 font-weight: normal;
@@ -185,14 +206,12 @@ color: #494848;
     top: 230%;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; 
 }
-
 .signlanguage{
     display: flex;
     background-color: #FBF8F5;
     margin-top: 14%;
     height: 600px;
 }
-
 
 .signlang {
 
@@ -201,7 +220,6 @@ color: #494848;
     max-width: 900px;
     margin-left: 10%;
     padding: 4%;
-
 
 }
 .signlanguage p{
@@ -218,7 +236,6 @@ font-size: 18px;
 line-height: 21px;
 color: #494848;
 }
-
 
 .nonprofit{
     display: flex;
@@ -263,7 +280,6 @@ color: #494848;
     font-size: 18px;
     line-height: 21px;
     color: #494848;
-
 }
 
 .nonprofitgovernment {
@@ -273,13 +289,11 @@ color: #494848;
     height: 600px;
 }
 
-
 footer {
     display: flex;
     background: #494848;
     margin-top: 30%;
     height: 90px;
-    
 }
 footer ul {
     margin: 0 auto;
@@ -292,15 +306,12 @@ footer li a{
     display: center;
     position: relative;
     text-decoration: none;  
-    
-    
 }
 
 footer li{
     list-style-type: none;
     padding-right: 10px;
-    
-    
+     
 }
 li{
     float: center;
@@ -308,18 +319,15 @@ li{
 li a{
     display: center; 
     float: center;    
-
-   
 }
 
     .fullname {
-        width: 400px;
+        width: 500px;
         height: 50px;
         border: 1px solid #838181;
         box-sizing: border-box; 
-        width: 30%;
-        font-color: #838181
-        
+        width: 50%;
+        font-color: #838181 
       }
       .name {
         font-color: #838181  
@@ -336,18 +344,16 @@ li a{
         height: 50px;
         border: 1px solid #838181;
         box-sizing: border-box; 
-        width: 30%; 
-        
-
+        width: 50%; 
+    
 }
 
-
 .message {
-    width: 400px;
-    height: 50px;
+    width: 600px;
+    height: 100px;
     border: 1px solid #838181;
     box-sizing: border-box; 
-    width: 30%;
+    width: 50%;
     font-color: #838181 
 } 
     
